--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -17,6 +17,22 @@
             <%= f.button "登録なしで使ってみる", class: "btn btn-success" %>
           <% end %>
           <br><br>
+          <!-- クライアントライブラリの読み込み -->
+          <script src="https://accounts.google.com/gsi/client" async defer></script>
+          <!-- google ログインボタン -->
+          <script src="https://accounts.google.com/gsi/client" async></script>
+          <div id="g_id_onload"
+              data-client_id="<%= Rails.application.credentials.dig(:google, :client_id) %>"
+              data-login_uri="http://localhost:3000/google_login_api/callback">
+          </div>
+          <div class="g_id_signin"
+              data-type="standard"
+              data-size="large"
+              data-text="sign_in_with"
+              data-shape="rectangular"
+              data-logo_alignment="left">
+          </div>
+          <br><br>
           <%= form_with url: login_path, method: :post, local: true do |f| %>
             <%= f.label :email, "メールアドレス", class: "label" %>
             <%= f.email_field :email, placeholder: "memosprout@example.com", class: "input input-bordered w-full max-w-xs" %>
@@ -25,7 +41,9 @@
             <%= f.label :password, "パスワード", class: "label" %>
             <%= f.password_field :password, class: "input input-bordered w-full max-w-xs" %>
             <br><br>
-            <%= link_to "パスワードをお忘れの方はこちら", "#", class: "btn btn-link" %>
+            <div class="tooltip" data-tip="アップデートをお待ちください">
+              <%= link_to "パスワードをお忘れの方はこちら", "#", class: "btn btn-link" %>
+            </div>
             <br><br>
             <%= submit_tag "ログイン", class: "btn btn-warning" %>
           <% end %>
