--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -10,28 +10,14 @@
         思考整理を習慣化して、自分の新しい価値観に気付いてみませんか？
       </p>
       <br><br>
-
+      <%= link_to 'Login with Google', auth_at_provider_path(provider: :google), class: "btn btn-outline btn-warning" %><br><br>
       <% if current_user.nil? %>
         <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
           <%= form_with url: guest_login_path, method: :post, local: true do |f| %>
             <%= f.button "登録なしで使ってみる", class: "btn btn-success" %>
           <% end %>
           <br><br>
-          <!-- クライアントライブラリの読み込み -->
-          <script src="https://accounts.google.com/gsi/client" async defer></script>
-          <!-- google ログインボタン -->
-          <script src="https://accounts.google.com/gsi/client" async></script>
-          <div id="g_id_onload"
-              data-client_id="<%= Rails.application.credentials.dig(:google, :client_id) %>"
-              data-login_uri="http://localhost:3000/google_login_api/callback">
-          </div>
-          <div class="g_id_signin"
-              data-type="standard"
-              data-size="large"
-              data-text="sign_in_with"
-              data-shape="rectangular"
-              data-logo_alignment="left">
-          </div>
+
           <br><br>
           <%= form_with url: login_path, method: :post, local: true do |f| %>
             <%= f.label :email, "メールアドレス", class: "label" %>
