--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
     <% else %>
       <%= render "shared/header_before_login" %>
     <% end %>
+    <div class="h-20"></div>
     <%= render "shared/flash_message" %>
     <%= yield %>
     <%= render "shared/footer" %>
