--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -6,25 +6,65 @@
   <div class="hero-content text-neutral-content text-center flex-col">
     <h1 class="mb-5 text-3xl md:text-4xl lg:text-5xl font-bold">自分を深く知る5分間</h1>
     <div class="max-w-sm md:max-w-2xl">
-
       <p class="mb-5">
         <!-- アプリ説明文 -->
         <%= simple_format(t('.introduction')) %>
       </p>
     </div>
-                <% if current_user.nil? %> <!-- ログインしていない場合に表示 -->
-        <!-- 登録なしで使ってみる -->
-        <%= form_with url: guest_login_path, method: :post, local: true, class: "my-5" do |f| %>
-          <%= f.button t('.guest_login'), class: "btn btn-success" %>
-        <% end %>
-                <% end %>
   </div>
 </div>
 
+<% if current_user.nil? %> <!-- ログインしていない場合に表示 -->
+  <div class="hero bg-gray-100 min-h-screen">
+    <div class="hero-content flex-col lg:flex-row-reverse">
+      <div class="md:text-center">
+        <!-- 画像 -->
+        <%= image_tag 'login_image.png', class: 'lg:scale-50 rounded-lg hidden lg:block' %>
+      </div>
 
 
+      <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl lg:ml-52">
+          <div class="card-body form-control">
+            <!-- Google認証ボタン -->
+            <%= link_to auth_at_provider_path(provider: :google), class: "flex justify-center" do %>
+              <%= image_tag "web_light_sq_SI.svg", alt: "Sign in with Google", class: "google-button" %>
+            <% end %>
+
+            <!-- または -->
+            <div class="divider text-gray-500 text-sm my-7"><%= t('.or') %></div>
+
+            <%= form_with url: login_path, method: :post, locale: true do |f| %>
+              <%= f.label :email, t('activerecord.attributes.user.email'), class: "label text-sm" %>
+              <%= f.email_field :email, placeholder: "email", autocomplete: "email", class: "input input-bordered w-full max-w-xs" %>
+
+              <%= f.label :password, t('activerecord.attributes.user.password'), class: "label text-sm" %>
+              <%= f.password_field :password, placeholder: "password", autocomplete: "current-password", class: "input input-bordered w-full max-w-xs" %>
+
+              <!-- パスワードをお忘れの方はこちら -->
+              <div class="tooltip tooltip-bottom" data-tip="アップデートをお待ちください">
+                <%= link_to t('.forgot_password?'), "#", class: "label link link-hover text-xs" %>
+              </div>
+
+              <%= submit_tag t('.login'), class: "btn btn-primary mt-8 mb-3 btn-block" %>
+            <% end %>
+            <!-- 新規登録ページへ -->
+            <%= link_to t('.sign_up'), new_user_path, class: "link text-sm text-center" %>
+
+            <!-- または -->
+            <div class="divider text-gray-500 text-sm my-7"><%= t('.or') %></div>
+
+            <!-- 登録なしで使ってみる -->
+            <%= form_with url: guest_login_path, method: :post, local: true, class: "btn btn-success my-2" do |f| %>
+              <%= f.button t('.guest_login') %>
+            <% end %>
 
 
+          </div>
+
+      </div>
+    </div>
+  </div>
+<% end %>
 
 
 
@@ -32,54 +72,6 @@
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl text-center">
 
-
-
-
-
-
-
-
-      <% if current_user.nil? %> <!-- ログインしていない場合に表示 -->
-
-          <!-- Google認証ボタン -->
-          <%= link_to auth_at_provider_path(provider: :google), class: "flex justify-center" do %>
-            <%= image_tag "web_light_sq_SI.svg", alt: "Sign in with Google", class: "google-button" %>
-          <% end %>
-
-          <!-- または -->
-          <br><div class="divider text-gray-500 text-sm"><%= t('.or') %></div><br>
-
-          <%= form_with url: login_path, method: :post, local: true do |f| %>
-            <%= f.label :email, t('activerecord.attributes.user.email'), class: "label" %>
-            <%= f.email_field :email, placeholder: "memosprout@example.com", autocomplete: "email", class: "input input-bordered w-full max-w-xs" %>
-            <br>
-
-            <br>
-            <%= f.label :password, t('activerecord.attributes.user.password'), class: "label" %>
-            <%= f.password_field :password, autocomplete: "current-password", class: "input input-bordered w-full max-w-xs" %>
-            <br><br>
-            <div class="tooltip" data-tip="アップデートをお待ちください">
-              <!-- パスワードをお忘れの方はこちら -->
-              <%= link_to t('.forgot_password?'), "#", class: "link link-primary text-xs" %>
-            </div>
-            <br><br>
-            <%= submit_tag t('.login'), class: "btn btn-warning" %>
-          <% end %>
-          <br><br>
-          <%= link_to t('.sign_up'), new_user_path, class: "btn btn-error" %>
-          <br><br>
-                    <!-- または -->
-          <br><div class="divider text-gray-500 text-sm"><%= t('.or') %></div><br>
-                  <!-- 登録なしで使ってみる -->
-        <%= form_with url: guest_login_path, method: :post, local: true, class: "my-5" do |f| %>
-          <%= f.button t('.guest_login'), class: "btn btn-success" %>
-        <% end %>
-
-
-
-      <% end %>
-      <br>
-      <br>
       <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
         <!-- このアプリでできること -->
         <%= t('.description') %>
